# EthicalAIditor

./: .env.example  .gitignore  DEPLOYMENT.md  HANDOFF.md  README.md  TODO.md  capacitor.config.ts  index.html  netlify.toml  package-lock.json  package.json  schema.sql  tailwind.config.js  vite.config.js  wrangler.toml
.github/: copilot-instructions.md
.wrangler/tmp/bundle-jqdXpS/: middleware-insertion-facade.js  (+1 more)
Ethical_Aiditor_Front_End/: README.md  index.html  package.json  vite.config.ts
Ethical_Aiditor_Front_End/src/: App.tsx  index.css
config/: approved-models.json
electron/: entitlements.mac.plist  main.js  preload.js
llm-api/: .dockerignore  .gcloudignore  Dockerfile  app.py  cloudbuild.yaml  download_model.py  requirements.txt
llm-api/vm-setup/: 01-install-dependencies.sh  02-deploy-app.sh  app.py  llm-api.service
netlify/functions/: vm-chat.js
plugins/capacitor-llama-cpp/: CapacitorLlamaCpp.podspec  package.json
plugins/capacitor-llama-cpp/android/src/main/cpp/: CMakeLists.txt  llamacpp_jni.cpp
src/: App.jsx  index.css
src/components/: AuditJobsPanel.jsx  Auth.jsx  Chat.tsx  ChatSidebar.jsx  ColdStartIndicator.css  ColdStartIndicator.tsx  EditPreview.jsx  Editor.jsx  EditorToolbar.jsx  Header.jsx  McpSelector.jsx  ModelSelector.jsx  StyleAssetsPanel.jsx  WritingModeSelector.jsx
src/hooks/: index.js  useEthicalChat.js
src/lib/: file-parser.js
src/services/: audit.js  cache.js  friendli.js  huggingface.js  local-llm.js  mobile-llm.js  rag.js  structured-edit.js  styles.js  warmup.js
src/stubs/: capacitor-stub.js
worker/: index.js
workers/: api-proxy.ts  tsconfig.json
(+21 files in other folders)
